--- a/HW1_P2.ipynb
+++ b/HW1_P2.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Parisima Abdali, pa2297 <br>"
+        "Parisima Abdali, parisima.abdali@nyu.edu <br>"
       ],
       "metadata": {
         "id": "uCmZhXlgyqVy"
